# cerebro

./: Hand_Model.pde  Noise_filter_Design.TSC  PCB.pdsprj  README.md  cerebro.docx  theta_control_3dof.m
CADs/Arm/: forearm.STL  hand_connector.STL  shoulder.STL  shoulder_connector.STL  shoulder_connector_1.STL  shoulder_connector_2.STL  shoulderconnector1.STL  shoulderconnector2.STL  upper_arm.STL  upper_arm.stl
Classification_Models/cnn_basic/: model.ckpt  model11.ckpt  model12.ckpt  model13.ckpt  model14.ckpt  model21.ckpt  model25.ckpt  model4.ckpt  model7.ckpt
EEG_classification/utils/: sample2file.csv
MI_classification/utils/: cluncth_blink.py  txt_to_csv.py
Simulation/arm_description/: CMakeLists.txt
arm_description/: package.xml
arm_description/launch/: arm_rviz.launch
arm_description/meshes/collision/: shoulderconnector1.dae  shoulderconnector2.dae
arm_description/urdf/: rrbot.xacro
data/: clench_1.csv  clench_2.csv  datalabel2.csv  datalabel3.csv  scrunch.csv
data/RAW/: clench_1.csv
data/train/: data1.csv  data10.csv  data102.csv  data104.csv  data107.csv  data111.csv  data113.csv  data114.csv  data117.csv  data119.csv  data122.csv  data125.csv  data126.csv  data128.csv  data13.csv  data130.csv  data132.csv  data134.csv  data135.csv  data136.csv  data139.csv  data14.csv  data141.csv  data143.csv  data146.csv  data15.csv  data152.csv  data153.csv  data154.csv  data155.csv  data156.csv  data159.csv  data16.csv  data160.csv  data161.csv  data162.csv  (+358 more)
end_effector_control/: Inv_kin.m  code.cpp
utils/: sample2file.py  txt_to_csv.py
(+524 files in other folders)
